# mi-tienda-desktop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: entitlements.plist
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: installer-hooks.nsi
