[package]
name = "mi-tienda-desktop"
version = "0.1.1"
description = "Mi Tienda POS — desktop wrapper"
authors = ["Mi Tienda"]
edition = "2021"

[lib]
name = "mi_tienda_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
